@@ -20,42 +20,26 @@ public class CustomUserDetails implements UserDetails {
         this.userId = user.getUserId();
         this.email = user.getEmail();
         this.password = user.getPassword();
-        this.role = user.getRole().name(); // SUPER_ADMIN / ADMIN / GUARD
+        this.role = user.getRole().name();
         this.societyId =
                 user.getSociety() != null ? user.getSociety().getSocietyId() : null;
     }
 
-    public Long getUserId() {
-        return userId;
-    }
-
-    public Long getSocietyId() {
-        return societyId;
-    }
-
-    public String getRole() {
-        return role;
-    }
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(
+        return java.util.Collections.singletonList(
             new SimpleGrantedAuthority("ROLE_" + role)
         );
     }
 
-    @Override
-    public String getUsername() {
-        return email;
-    }
-
-    @Override
-    public String getPassword() {
-        return password;
-    }
-
+    @Override public String getUsername() { return email; }
+    @Override public String getPassword() { return password; }
     @Override public boolean isAccountNonExpired() { return true; }
     @Override public boolean isAccountNonLocked() { return true; }
     @Override public boolean isCredentialsNonExpired() { return true; }
     @Override public boolean isEnabled() { return true; }
+
+    public Long getUserId() { return userId; }
+    public Long getSocietyId() { return societyId; }
 }
+
